fixed image table

--- a/manualPondPicking.ipynb
+++ b/manualPondPicking.ipynb
@@ -23,7 +23,8 @@
     "All you need to do is run the cells in this notebook in sequence, and trace out the surface and lake bed with line segments by clicking on the plots that are generated. The results should look something along the lines of this:\n",
     "<table><tr>\n",
     "<td> <img src=\"imgs/pondPickingExample.png\" alt=\"an example of picked surfaces\" style=\"height: 350px;\"/> </td>\n",
-    "<td> <img src=\"imgs/pondPickingCheckExample.png\" alt=\"an example of all picked surfaces when checking the data\" style=\"height: 350px;\"/>  </td>\n"
+    "<td> <img src=\"imgs/pondPickingCheckExample.png\" alt=\"an example of all picked surfaces when checking the data\" style=\"height: 350px;\"/>  </td>\n",
+    "</tr></table>\n"
    ]
   },
   {
