add note about 2nd returns, sensor oversaturation and dead-time

--- a/manualPondPicking.ipynb
+++ b/manualPondPicking.ipynb
@@ -56,7 +56,10 @@
     "Run the cell below. On the plot that appears, pick the surface and the lake bed for pond 1.\n",
     "- Start with tracing out the (flat) water surface. On each mouse click the plot will update to show in blue where you have picked the surface so far. If you want to go back, just press the `'Backspace'` key and you will see your last picked point disappear. If there are multiple water bodies that are disconnected in this transect (small \"islands\"), press `'n'` to start a new line segment that is not connected to the one before. \n",
     "- Press `'2'` on your keyboard to move on to picking the lake bed. This will be plotted in red. You can use the `'Backspace'` and `'n'` keys as before. If you want to return to editing the surface, you can press `'1'` on your keyboard.\n",
-    "- Move on to the next cell when you're done."
+    "- Move on to the next cell when you're done.\n",
+    "\n",
+    "***NOTE:*** *Sometimes there seems to be a second, flat return surface just about half a metre below the pond surface (see below). This is due to oversaturation and dead-time of the sensor. Such second returns are not an actual surface, and should be IGNORED!*\n",
+    "<img src=\"imgs/ex3.png\" alt=\"examples of a second return due to sensor oversaturation and dead-time\" width=\"300\"/>"
    ]
   },
   {
