--- a/manualPondPicking.ipynb
+++ b/manualPondPicking.ipynb
@@ -145,7 +145,9 @@
    "source": [
     "## Step 7: Download the generated data and send it to me\n",
     "Run the cell below. A download link for a csv file will appear. Download the file and email it to parndt(at)ucsd.edu. \n",
-    "Thanks :-)"
+    "Thanks :-)\n",
+    "\n",
+    "*Note: Please actually download the file and send as an attachment. Unfortunately, I will NOT be able to access the file if you just copy-paste the link below...*"
    ]
   },
   {
@@ -157,13 +159,6 @@
     "from IPython.display import FileLink, FileLinks\n",
     "FileLinks('pickeddata/')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
